toxxi/tests/snapshots/widgets_game_card_test__game_card.snap
---
source: rs-toxcore-c/toxxi/tests/widgets/game_card_test.rs
expression: rendered
---
──────────────────────────────────────────────────
╭─ 🎮 Chess Challenge────────────────────────────╮
│ Alice wants to play!                           │
╰─ [ (j) Join Game ] [ (n) No thanks ] ──────────╯
                                                  
                                                  
──────────────────────────────────────────────────
