toxxi/tests/snapshots/widgets_game_card_test__game_card_focused.snap
---
source: rs-toxcore-c/toxxi/tests/widgets/game_card_test.rs
expression: rendered
---
──────────────────────────────────────────────────
╭─ 🎮 2048 Challenge─────────────────────────────╮
│ Bob wants to play!                             │
╰─ [ (j) Join Game ] [ (n) No thanks ] ──────────╯
                                                  
                                                  
──────────────────────────────────────────────────
